Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <p>Más información en la <a href="http://en.wikipedia.org/wiki/Sieve_of_Eratosthenes">Wikipedia inglesa</a> y en <a href="http://es.wikipedia.org/wiki/Criba_de_Erat%C3%B3stenes">la española</a>.</p>
 
-<p><img alt="Sieve of Eratosthenes animation.gif"></p>
+<p><img alt="Sieve of Eratosthenes animation"></p>
 
-<p>CC BY-SA 3.0 via <a href="%22//commons.wikimedia.org/wiki/%22">Wikimedia Commons</a>.</p>
+<p>CC BY-SA 3.0 via Wikimedia Commons.</p>
 
 <h3>
 <a name="lenguajes-de-programaci%C3%B3n" class="anchor" href="#lenguajes-de-programaci%C3%B3n"><span class="octicon octicon-link"></span></a>Lenguajes de programación</h3>
